force-app/main/default/objects/Block__c/fields/Agreement_CRM_Executive__c.field-meta.xml
<CustomField>
    <fullName>Agreement_CRM_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agreement CRM Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Blocks4</relationshipName>
    <type>Lookup</type>
</CustomField>