force-app/main/default/objects/Block__c/fields/Constriction_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Constriction_Account_Number__c</fullName>
    <label>Constriction Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>