force-app/main/default/objects/Block__c/fields/Constriction_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Constriction_Bank_Name__c</fullName>
    <label>Constriction Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>