force-app/main/default/objects/Block__c/fields/Constriction_Branch__c.field-meta.xml
<CustomField>
    <fullName>Constriction_Branch__c</fullName>
    <label>Constriction Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>