force-app/main/default/objects/Block__c/fields/Constriction_IFSC_Code__c.field-meta.xml
<CustomField>
    <fullName>Constriction_IFSC_Code__c</fullName>
    <label>Constriction IFSC Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>