force-app/main/default/objects/Block__c/fields/Constriction_Type_of_Account__c.field-meta.xml
<CustomField>
    <fullName>Constriction_Type_of_Account__c</fullName>
    <label>Constriction Type of Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>