force-app/main/default/objects/Block__c/fields/Construction_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Construction_Company_Name__c</fullName>
    <label>Construction Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>