force-app/main/default/objects/Block__c/fields/CRM_Executive__c.field-meta.xml
<CustomField>
    <fullName>CRM_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initial Booking CRM Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Blocks</relationshipName>
    <type>Lookup</type>
</CustomField>