force-app/main/default/objects/Block__c/fields/Inspection_Executive__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspection Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Blocks3</relationshipName>
    <type>Lookup</type>
</CustomField>