force-app/main/default/objects/Block__c/fields/Intrest_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Intrest_Percentage__c</fullName>
    <label>Intrest Percentage</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>