force-app/main/default/objects/Block__c/fields/Land_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Land_Company_Name__c</fullName>
    <label>Land Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>