force-app/main/default/objects/Block__c/fields/Project_Address__c.field-meta.xml
<CustomField>
    <fullName>Project_Address__c</fullName>
    <label>Project Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>