force-app/main/default/objects/Block__c/fields/RERA_NO__c.field-meta.xml
<CustomField>
    <fullName>RERA_NO__c</fullName>
    <label>RERA.NO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>