force-app/main/default/objects/Block__c/fields/Type_of_Account__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Account__c</fullName>
    <label>Type of Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>