force-app/main/default/objects/Block__c/validationRules/Restrict_selection_of_Blocks.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_selection_of_Blocks</fullName>
    <active>true</active>
    <errorConditionFormula>(
    TEXT(Project__r.Project_Type__c) = &apos;Villas&apos; &amp;&amp;
    TEXT(Type__c) = &apos;Apartments&apos; 
)
||
(
    TEXT(Project__r.Project_Type__c) = &apos;Apartments&apos; &amp;&amp;
    TEXT(Type__c) &lt;&gt; &apos;Apartments&apos;
)</errorConditionFormula>
    <errorMessage>Please select the appropriate block type</errorMessage>
</ValidationRule>