force-app/main/default/objects/Block__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Project__c</columns>
    <columns>RERA_NO__c</columns>
    <columns>CRM_Executive__c</columns>
    <columns>Agreement_CRM_Executive__c</columns>
    <columns>Demands_Collections_CRM_Executive__c</columns>
    <columns>Registration_CRM_Executive__c</columns>
    <columns>Possession_Handover_CRM_Executive__c</columns>
    <columns>Customer_Service_CRM_Executive__c</columns>
    <columns>CRM_Head__c</columns>
    <columns>CRM_Manager__c</columns>
    <columns>Inspection_Executive__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>